--- a/.babelrc
+++ b/.babelrc
@@ -7,5 +7,11 @@
         "corejs": 3
       }
     ]
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-proposal-class-properties",
+      { "loose": true }
+    ]
   ]
 }
